feat: password conference and finalization

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "competencias",
+        "galinhamoana",
         "postgree",
         "postgrees",
         "Técnologias"
